--- a/templates/sources.html
+++ b/templates/sources.html
@@ -1,1 +1,131 @@
-sources
+{% extends 'layout.html'%}
+{% block content %}
+<div class="app-container">
+    <div class="position-relative">
+        <div class="bg-primary app-container-background position-absolute right-0 left-0 w-100 "></div>
+        <div class="position-relative w-100 pt-5">
+            <div class="container app-user-info">
+                <div class="row">
+                    <div class="col-12 text-white col-sm-6">
+                        <h2>Thống Kê Nguồn Tiền</h2>
+                    </div>
+                    <div class="col-6 text-end">
+                        <button type="button" class="btn btn-primary bg-white text-primary fw-bold"  data-bs-toggle="modal" data-bs-target="#newTransaction"><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M4.33893 1V4H1.28809V6H4.33893V9H6.37283V6H9.42368V4H6.37283V1H4.33893ZM3.32198 20.007V11H5.35588V19H13.4915V14C13.4915 13.45 13.9491 13 14.5084 13L19.5932 12.999V5H11.4576V3H20.6172C21.1745 3 21.6271 3.456 21.6271 4.002V15L15.5254 20.996L4.34097 21C4.07213 21.0005 3.81402 20.8964 3.62307 20.7103C3.43212 20.5242 3.32387 20.2713 3.32198 20.007ZM18.7501 14.999L15.5254 15V18.169L18.7501 14.999Z" fill="#1230AE"/>
+                            </svg>
+                            Thêm nguồn tiền</button>
+                    </div>
+                </div>
+            </div>
+            <div class="container bg-light app-content mt-3">
+              <div class="row">
+                  <div class="col-12">
+                    <div class="fund-list mt-4">
+                        {% for tieude, status, card_type, type, sothe, sodu in sources %}
+                        <div class="fund-item mb-4">
+                            <div class="row">
+                                <div class="col-7 d-flex align-items-center gap-2">
+                                    <span>
+                                      {% if type == 'cash' %}
+                                        <img src="{{ url_for('static', filename='images/cash.svg') }}" >
+                                      {% elif type == 'bank' %}
+                                        <img src="{{ url_for('static', filename='images/bank-transfer.svg') }}" >
+                                      {% elif type == 'card' and card_type =='Visa'  %}
+                                        <img src="{{ url_for('static', filename='images/visa.svg') }}" >
+                                      {% elif type == 'card' and card_type =='Master' %}
+                                        <img src="{{ url_for('static', filename='images/master.svg') }}" >
+                                      {% elif type == 'card' and card_type =='ATM' %}
+                                        <img src="{{ url_for('static', filename='images/atm.svg') }}" >
+                                      {% else %}
+                                        <img src="{{ url_for('static', filename='images/finly-white.svg') }}" >
+                                      {% endif %}
+                                    </span>
+                                    <span>
+                                      {{ tieude }}
+                                    </span>
+                                </div>
+                                <div class="col-5 text-end">
+                                  {% if status == 1 %}
+                                    {% if type == 'wallet' %}
+                                      <span>Mặc định</span>
+                                    {% else %}
+                                      <span>Đang hoạt động</span>
+                                    {% endif %}
+                                  {% else %}
+                                    <span>Không hoạt động</span>
+                                  {% endif %}
+                                </div>
+                            </div>
+                            <div class="row mt-4">
+                                <div class="col-12 fw-bold">
+                                  {% if type == 'card' %}
+                                    {{ sothe }}
+                                  {% else %}
+                                    {{ sodu | format_number }} vnđ
+                                  {% endif %}
+                                </div>
+                            </div>
+                        </div>
+                        {% endfor %}
+                    </div>
+                  </div>
+              </div>
+          </div>
+        </div>
+    </div>
+  </div>
+  <div class="modal fade" id="newTransaction" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="newTransactionLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="newTransactionLabel">Thêm Nguồn Tiền</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <form method="POST" action="{{ url_for('add_source') }}">
+                <div class="mb-3">
+                    <label for="title" class="form-label">Tên Nguồn Thu</label>
+                    <input type="text" class="form-control" id="title" name="title" required>
+                </div>
+                <div class="mb-3">
+                    <label for="type" class="form-label">Loại Nguồn Thu</label>
+                    <select class="form-select" id="type" name="type" required onchange="toggleCardType(this)">
+                        <option value="cash">Tiền mặt</option>
+                        <option value="card">Thẻ</option>
+                        <option value="bank">Ngân hàng</option>
+                    </select>
+                </div>
+                <div class="mb-3 d-none" id="cardTypeContainer">
+                    <label for="card_type" class="form-label">Loại Thẻ</label>
+                    <select class="form-select" id="card_type" name="card_type">
+                        <option value="ATM">ATM</option>
+                        <option value="Master">Master</option>
+                        <option value="Visa">Visa</option>
+                    </select>
+                </div>
+                <div class="mb-3">
+                    <label for="status" class="form-label">Trạng Thái</label>
+                    <select class="form-select" id="status" name="status" required>
+                        <option value="1" selected>Đang hoạt động</option>
+                        <option value="0">Không hoạt động</option>
+                    </select>
+                </div>
+                <button type="submit" class="btn btn-primary">Thêm Nguồn Thu</button>
+            </form>
+        </div>
+      </div>
+    </div>
+  </div>
+{% endblock %}
+{% block scripts %}
+<script>
+    function toggleCardType(select) {
+        const cardTypeContainer = document.getElementById('cardTypeContainer');
+        if (select.value === 'card') {
+            cardTypeContainer.classList.remove('d-none');
+        } else {
+            cardTypeContainer.classList.add('d-none');
+        }
+    }
+</script>
+{% endblock%}
