--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -1,16 +1,16 @@
 {% extends 'layout.html'%}
 {% block content %}
 <div class="app-container">
-    <div class="bg-primary position-relative app-container-background">
-        <div class="position-absolute right-0 left-0 w-100 mt-5">
+    <div class="position-relative">
+        <div class="bg-primary app-container-background position-absolute right-0 left-0 w-100 "></div>
+        <div class="position-relative w-100 pt-5">
             <div class="container app-user-info">
                 <div class="row">
-                    <div class="col-6 text-white">
-                        <h5>Xin chào,</h5>
-                        <h2>{{ current_user.hoten }}</h2>
+                    <div class="col-12 text-white col-sm-6">
+                        <h2>Thống Kê Giao Dịch</h2>
                     </div>
-                    <div class="col-6 text-end">
-                        <button type="button" class="btn btn-primary bg-white text-primary fw-bold"  data-bs-toggle="modal" data-bs-target="#newTransaction"><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <div class="col-12 col-sm-6 text-end">
+                        <button type="button" class="btn btn-primary bg-white text-primary fw-bold w-auto"  data-bs-toggle="modal" data-bs-target="#newTransaction"><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M4.33893 1V4H1.28809V6H4.33893V9H6.37283V6H9.42368V4H6.37283V1H4.33893ZM3.32198 20.007V11H5.35588V19H13.4915V14C13.4915 13.45 13.9491 13 14.5084 13L19.5932 12.999V5H11.4576V3H20.6172C21.1745 3 21.6271 3.456 21.6271 4.002V15L15.5254 20.996L4.34097 21C4.07213 21.0005 3.81402 20.8964 3.62307 20.7103C3.43212 20.5242 3.32387 20.2713 3.32198 20.007ZM18.7501 14.999L15.5254 15V18.169L18.7501 14.999Z" fill="#1230AE"/>
                             </svg>
                             Thêm giao dịch</button>
@@ -53,52 +53,55 @@
                           </div>
                       </form>
                       <!-- Bảng giao dịch -->
-                      <table class="table">
-                          <thead class="table-light">
-                              <tr>
-                                  <th scope="col">#</th>
-                                  <th scope="col">Danh mục</th>
-                                  <th scope="col">Loại</th>
-                                  <th scope="col">Số tiền</th>
-                                  <th scope="col">Ngày</th>
-                                  <th scope="col">Ghi chú</th>
-                                  <th></th>
-                              </tr>
-                          </thead>
-                          <tbody>
-                              {% for transaction in transactions %}
-                                  <tr>
-                                      <th scope="row">{{ transaction[0] }}</th>
-                                      <td>{{ transaction[1] }}</td>
-                                      <td>
-                                        {% if transaction[2] == 'expense' %}
-                                            <span class="badge text-bg-primary">Chi tiêu</span>
-                                        {% else %}
-                                            <span class="badge text-bg-info">Thu nhập</span>
-                                        {% endif %}
-                                      </td>
-                                      <td>{{ transaction[3] }}</td>
-                                      <td>{{ transaction[4] }}</td>
-                                      <td>{{ transaction[5] }}</td>
-                                      <td>
-                                          <a href="" class="btn btn-primary btn-sm">Sửa</a>
-                                          <a href="" class="btn btn-danger btn-sm">Xóa</a>
-                                      </td>
-                                  </tr>
-                              {% endfor %}
-                          </tbody>
-                      </table>
-                      <nav>
-                          <ul class="pagination justify-content-center">
-                              {% for page in range(1, total_pages + 1) %}
-                                  <li class="page-item {% if page == current_page %}active{% endif %}">
-                                      <a class="page-link" href="{{ url_for('transactions', page=page, category=request.args.get('category'), type=request.args.get('type'), search=request.args.get('search')) }}">
-                                          {{ page }}
-                                      </a>
-                                  </li>
-                              {% endfor %}
-                          </ul>
-                      </nav>
+                      <div class="table-responsive">
+                        <table class="table">
+                            <thead class="table-light">
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">Danh mục</th>
+                                    <th scope="col">Loại</th>
+                                    <th scope="col">Số tiền</th>
+                                    <th scope="col">Ngày</th>
+                                    <th scope="col">Ghi chú</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for transaction in transactions %}
+                                    <tr>
+                                        <th scope="row">{{ transaction[0] }}</th>
+                                        <td>{{ transaction[1] }}</td>
+                                        <td>
+                                          {% if transaction[2] == 'expense' %}
+                                              <span class="badge text-bg-primary">Chi tiêu</span>
+                                          {% else %}
+                                              <span class="badge text-bg-info">Thu nhập</span>
+                                          {% endif %}
+                                        </td>
+                                        <td>{{ transaction[3] }}</td>
+                                        <td>{{ transaction[4] }}</td>
+                                        <td>{{ transaction[5] }}</td>
+                                        <td>
+                                            <a href="" class="btn btn-primary btn-sm">Sửa</a>
+                                            <a href="" class="btn btn-danger btn-sm">Xóa</a>
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                        <nav>
+                            <ul class="pagination justify-content-center">
+                                {% for page in range(1, total_pages + 1) %}
+                                    <li class="page-item {% if page == current_page %}active{% endif %}">
+                                        <a class="page-link" href="{{ url_for('transactions', page=page, category=request.args.get('category'), type=request.args.get('type'), search=request.args.get('search')) }}">
+                                            {{ page }}
+                                        </a>
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        </nav>
+                      </div>
+                      
                   </div>
               </div>
           </div>
