--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -71,7 +71,7 @@
                   </div>
                   <div class="mt-4">
                     <div class="row">
-                      <div class="col-10 section-heading">Danh Mục</div>
+                      <div class="col-10 section-heading">Giao Dịch</div>
                       <div class="col-2 text-end">
                         <a href="{{ url_for('transactions') }}"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M10 4H6C5.46957 4 4.96086 4.21071 4.58579 4.58579C4.21071 4.96086 4 5.46957 4 6V18C4 18.5304 4.21071 19.0391 4.58579 19.4142C4.96086 19.7893 5.46957 20 6 20H18C18.5304 20 19.0391 19.7893 19.4142 19.4142C19.7893 19.0391 20 18.5304 20 18V14M12 12L20 4M20 4V9M20 4H15" stroke="#1230AE" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
@@ -232,7 +232,7 @@
               <div class="mb-3">
                 <label class="form-label">Nguồn tiền</label>
                 <select class="form-select" name="source" required>
-                  <option selected disabled value="">Chọn nguồn tiền</option> {% for source in sources_types %} <option value="{{ source[0] }}">{{ source[1] }}</option> {% endfor %}
+                  <option selected disabled value="">Chọn nguồn tiền</option> {% for id, type in sources_types %} <option value="{{ id }}">{{ type }}</option> {% endfor %}
                 </select>
               </div>
               <div class="mb-3">
@@ -262,7 +262,7 @@
               <div class="mb-3">
                 <label class="form-label">Nguồn tiền</label>
                 <select class="form-select" name="source" required>
-                  <option selected disabled value="">Chọn nguồn tiền</option> {% for source in sources %} <option value="{{ source[0] }}">{{ source[1] }}</option> {% endfor %}
+                  <option selected disabled value="">Chọn nguồn tiền</option> {% for id, type in sources_types %} <option value="{{ id }}">{{ type }}</option> {% endfor %}
                 </select>
               </div>
               <div class="mb-3">
