--- a/templates/sources.html
+++ b/templates/sources.html
@@ -10,7 +10,7 @@
                         <h2>Thống Kê Nguồn Tiền</h2>
                     </div>
                     <div class="col-6 text-end">
-                        <button type="button" class="btn btn-primary bg-white text-primary fw-bold"  data-bs-toggle="modal" data-bs-target="#newTransaction"><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <button type="button" class="btn btn-primary bg-white text-primary fw-bold"  data-bs-toggle="modal" data-bs-target="#newSource"><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M4.33893 1V4H1.28809V6H4.33893V9H6.37283V6H9.42368V4H6.37283V1H4.33893ZM3.32198 20.007V11H5.35588V19H13.4915V14C13.4915 13.45 13.9491 13 14.5084 13L19.5932 12.999V5H11.4576V3H20.6172C21.1745 3 21.6271 3.456 21.6271 4.002V15L15.5254 20.996L4.34097 21C4.07213 21.0005 3.81402 20.8964 3.62307 20.7103C3.43212 20.5242 3.32387 20.2713 3.32198 20.007ZM18.7501 14.999L15.5254 15V18.169L18.7501 14.999Z" fill="#1230AE"/>
                             </svg>
                             Thêm nguồn tiền</button>
@@ -57,12 +57,16 @@
                                 </div>
                             </div>
                             <div class="row mt-4">
-                                <div class="col-12 fw-bold">
+                                <div class="col-7 fw-bold">
                                   {% if type == 'card' %}
                                     {{ sothe }}
                                   {% else %}
                                     {{ sodu | format_number }} vnđ
                                   {% endif %}
+                                </div>
+                                <div class="col-5 text-end">
+                                  <a href="{{ url_for('add_source') }}" class="btn btn-primary bg-white text-primary fw-bold">Cập nhật</a>
+                                  <a href="{{ url_for('add_source') }}" class="btn btn-danger fw-bold">Xóa</a>
                                 </div>
                             </div>
                         </div>
@@ -74,23 +78,23 @@
         </div>
     </div>
   </div>
-  <div class="modal fade" id="newTransaction" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="newTransactionLabel" aria-hidden="true">
+  <div class="modal fade" id="newSource" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="newSourceLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="newTransactionLabel">Thêm Nguồn Tiền</h1>
+          <h1 class="modal-title fs-5" id="newSourceLabel">Thêm Nguồn Tiền</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
             <form method="POST" action="{{ url_for('add_source') }}">
                 <div class="mb-3">
-                    <label for="type" class="form-label">Loại Nguồn Thu</label>
-                    <select class="form-select" id="type" name="type" required onchange="toggleCardType(this)">
-                        <option value="wallet" disabled>Ví Finly</option>
-                        <option value="cash" {% if 'cash' in sources_types %}disabled{% endif %}>Tiền mặt</option>
-                        <option value="card">Thẻ</option>
-                        <option value="bank">Chuyển Khoản Ngân hàng</option>
-                    </select>
+                    <label for="type" class="form-label">Loại Nguồn Tiền</label>
+                    <select class="form-select" id="type" name="type" required>
+                      <option value="wallet" disabled>Ví Finly</option>
+                      <option value="cash" {% if disable_cash %}disabled{% endif %}>Tiền mặt</option>
+                      <option value="card">Thẻ</option>
+                      <option value="bank" {% if disable_bank %}disabled{% endif %}>Chuyển Khoản Ngân hàng</option>
+                  </select>
                 </div>
                 <div class="mb-3 d-none" id="cardTypeContainer">
                     <label for="card_type" class="form-label">Loại Thẻ</label>
