--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -73,7 +73,7 @@
                     <div class="row">
                       <div class="col-10 section-heading">Giao Dịch</div>
                       <div class="col-2 text-end">
-                        <a href="{{ url_for('transactions') }}"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <a href="{{ url_for('transactions_bp.transactions') }}"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M10 4H6C5.46957 4 4.96086 4.21071 4.58579 4.58579C4.21071 4.96086 4 5.46957 4 6V18C4 18.5304 4.21071 19.0391 4.58579 19.4142C4.96086 19.7893 5.46957 20 6 20H18C18.5304 20 19.0391 19.7893 19.4142 19.4142C19.7893 19.0391 20 18.5304 20 18V14M12 12L20 4M20 4V9M20 4H15" stroke="#1230AE" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                         </svg></a>
                       </div>
@@ -134,7 +134,7 @@
               <div class="row">
                   <div class="col-10 section-heading">Nguồn Tiền</div>
                   <div class="col-2 text-end">
-                      <a href="{{ url_for('sources') }}">
+                      <a href="{{ url_for('sources_bp.sources') }}">
                           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                               <path d="M10 4H6C5.46957 4 4.96086 4.21071 4.58579 4.58579C4.21071 4.96086 4 5.46957 4 6V18C4 18.5304 4.21071 19.0391 4.58579 19.4142C4.96086 19.7893 5.46957 20 6 20H18C18.5304 20 19.0391 19.7893 19.4142 19.4142C19.7893 19.0391 20 18.5304 20 18V14M12 12L20 4M20 4V9M20 4H15" stroke="#1230AE" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                           </svg>
@@ -214,7 +214,7 @@
         </ul>
         <div class="tab-content" id="pills-tabContent">
           <div class="tab-pane fade show active" id="pills-expense" role="tabpanel" aria-labelledby="pills-expense-tab">
-            <form class="my-3" action="{{ url_for('add_transaction') }}" method="POST">
+            <form class="my-3" action="{{ url_for('transactions_bp.add_transaction') }}" method="POST">
               <div class="mb-3">
                 <label for="spendAmount" class="form-label">Số tiền</label>
                 <input type="number" class="form-control" id="spendAmount" name="amount" required>
@@ -244,7 +244,7 @@
             </form>
           </div>
           <div class="tab-pane fade" id="pills-income" role="tabpanel" aria-labelledby="pills-income-tab">
-            <form class="my-3" action="{{ url_for('add_transaction') }}" method="POST">
+            <form class="my-3" action="{{ url_for('transactions_bp.add_transaction') }}" method="POST">
               <div class="mb-3">
                 <label for="spendAmount" class="form-label">Số tiền</label>
                 <input type="number" class="form-control" id="spendAmount" name="amount" required>
