--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
                 <button type="submit" class="btn btn-primary w-100">Đăng nhập</button>
             </form>
             <div class="mt-3 text-center">
-                <p>Chưa có tài khoản? <a href="{{ url_for('register') }}">Đăng ký</a></p>
+                <p>Chưa có tài khoản? <a href="{{ url_for('auth_bp.register') }}">Đăng ký</a></p>
             </div>
         </div>
     </div>
