--- a/templates/register.html
+++ b/templates/register.html
@@ -24,7 +24,7 @@
                 <button type="submit" class="btn btn-primary w-100">Đăng ký</button>
             </form>
             <div class="mt-3 text-center">
-                <p>Đã có tài khoản? <a href="{{ url_for('login') }}">Đăng nhập</a></p>
+                <p>Đã có tài khoản? <a href="{{ url_for('auth_bp.login') }}">Đăng nhập</a></p>
             </div>
         </div>
     </div>
